k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: curiopay-api
  labels:
    app: curiopay-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: curiopay-api
